--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,102 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.homePageWrapper {
+  background-color: black;
+  color: white;
   min-height: 100vh;
+  max-width: 100vw;
   display: flex;
+  margin: 5px 5px 5px 5px;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.formWrapper {
+  background-color: #282c34;
+  padding: 20px;
+  border-radius: 8px;
+  max-width: fit-content;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+}
+
+.inputGroup {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.inputbox {
+  padding: 12px 16px;
+  border: none;
+  border-radius: 4px;
+  background-color: #444;
   color: white;
+  font-weight: bold;
 }
 
-.App-link {
-  color: #61dafb;
+.btn {
+  padding: 12px 16px;
+  border: none;
+  border-radius: 4px;
+  width: 20%;
+  background-color: #61fb87;
+  color: black;
+  cursor: pointer;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.joinbtn {
+  background-color: #61fb87;
+  font-weight: bold;
+  margin-left: auto;
+}
+.joinbtn:hover {
+  background-color: #9dc4a4;
+}
+.createinfo {
+  margin-top: 12px;
+  font-size: 14px;
+}
+
+.createNewBtn {
+  color: #61fb8d;
+  text-decoration: none;
+  border-bottom: 1px solid #61fb8d;
+  transition: all 0.3s ease-in-out;
+}
+
+.createNewBtn:hover {
+  color: #314935;
+  border-bottom: #314935 1px solid;
+}
+
+footer {
+  position: fixed;
+  bottom: 0px;
+  font-size: 14px;
+}
+
+.mainwrap{
+  display: grid;
+  grid-template-columns: 240px 1fr;
+  height: 100vh;
+}
+.aside{
+  background-color: #5b5454;
+  padding: 12px;
+  border-right: 1px solid #5b5454;
+  display: flex;
+  flex-direction: column;
+  color:white;
+}
+.asideInner {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.logo {
+  border-bottom: 1px solid #5b5454;
+  padding-bottom: 10px;
+  color: #56a86a;
 }
